--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
           <strong>Prior poor preparation</strong>
           <small>(BBPS &lt;6 overall, or any segment &lt;2)</small>
         </label>
+        <label><input type="checkbox" class="major" value="Parkinson's"> <strong>Parkinson's disease</strong></label>
       </div>
     </div>
 
@@ -347,7 +348,7 @@
     <tr class="black"><td>⚫ Picoprep Black Regimen</td><td>Previously failed 4 sachet Picoprep</td><td>6 sachet Picoprep + Bisacodyl 10mg for 2 days</td></tr>
   </table>
 
- <script>
+  <script>
     function calculate() {
       const majors = document.querySelectorAll('.major:checked');
       const minors = document.querySelectorAll('.minor:checked');
