--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     <ol>
       <li>Please click all relevant risk factors and specific scenarios if applicable.</li>
       <li>Click <strong>Determine Bowel Preparation</strong> for recommended bowel preparation.</li>
-      <li>Copy summary into REDCAP form <a href="https://tinyurl.com/TNHPREP" target="_blank" rel="noopener">https://tinyurl.com/TNHPREP</a></li>
+      <li>Copy summary into REDCAP form <a href="https://tinyurl.com/NHPrep-form" target="_blank" rel="noopener">https://tinyurl.com/NHPrep-Form</a></li>
     </ol>
   </div>
 
@@ -447,3 +447,4 @@
   </script>
 </body>
 </html>
+
